# fastapi-boilerplate

./: README.md  main.py  pyproject.toml
app/config/: database.py
