[project]
name = "cwchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.1",
    "annotated-types>=0.7.0",
    "anyio>=4.11.0",
    "bcrypt>=5.0.0",
    "cffi>=2.0.0",
    "click>=8.3.0",
    "cryptography>=46.0.3",
    "dependency-injector>=4.48.2",
    "ecdsa>=0.19.1",
    "fastapi>=0.120.2",
    "h11>=0.16.0",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "jinja2>=3.1.6",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-tools>=0.1.34",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "mcp>=1.19.0",
    "packaging>=25.0",
    "passlib>=1.7.4",
    "pluggy>=1.6.0",
    "psycopg2-binary>=2.9.11",
    "pyasn1>=0.6.1",
    "pycparser>=2.23",
    "pydantic>=2.12.3",
    "pydantic-core>=2.41.4",
    "pygments>=2.19.2",
    "pytest>=8.4.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.44",
    "starlette>=0.49.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uvicorn>=0.38.0",
]
